@@ -2,10 +2,17 @@ todo:
 isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
 mac getIpByName liefert name von IPnum
 
+
 opsi-script (4.12.15.5) unreleased/testing (4.2/4.3); urgency=medium
 
+* [fix] osparser: tssleep - handling of syntax and runtime errors (m.michaelis, !242)
 * [fix] powershellcall/ExecWith powershell:  approvments in runnning of powershell
-           commands on machines were powershell scripts are restricetd.
+           commands on machines were powershell scripts are restricetd. (j.werner, !243)
+* [fix] HasMinimumSpace for Linux and macOS, issue 38:
+        osparser: evaluateBoolean: HasMinimumSpace: Handle first parameter (s1)
+        s1 should be a directory at Unix (Linux / macOS)
+        s1 = empty = actual dir ".", s1= %SYSTEMDRIVE% = warning and fallback to root dir: "/"
+        (d.oertel, !246) 
 
 -- j.werner <j.werner@uib.de> 24 July 2024
 
@@ -53,6 +60,7 @@ opsi-script (4.12.15.0) unreleased/testing (4.2/4.3); urgency=medium
       if powershell execution policy was set by "UserPolicy" to "AllSigned" or "Restricted"
 * [fix] TOML file handling: now correctly escape backslash
 * [update] used openssl version is logged
+>>>>>>> main
 
 -- j.werner <j.werner@uib.de> 07 June 2024
 
